style correction on mobile version

--- a/client/src/Components/Auth/SignUp/signUp.scss
+++ b/client/src/Components/Auth/SignUp/signUp.scss
@@ -89,6 +89,7 @@ div.signup{
 			padding: 10px;
 			padding-left: 24px;
 			font-weight: 700;
+			font-size: 17px;
 			width: 100%;
 			transition: .2s;
 			color: $icon_input;
