--- a/client/src/Components/Users/Owner/owner.scss
+++ b/client/src/Components/Users/Owner/owner.scss
@@ -130,7 +130,7 @@ div.page__owner{
                 margin: 0;
                 position: absolute;
                 left: 45%;
-                bottom: 0;
+                bottom: -14px;
                 li.alice-carousel__dots-item{
                     background: $inact_dot;
                 }
